--- a/src/admin/templates/main.tpl.html
+++ b/src/admin/templates/main.tpl.html
@@ -13,18 +13,58 @@
         <h3>Запросы на кредит</h3>
         <p><a href="<?=CommonUtils::makeUrl('creditRequestList')?>">список запросов</a></p>
         <p>Всего на сайте <?=$creditRequestNum?> <?=RussianTextUtils::selectCaseForNumber($creditRequestNum, array('запрос', 'запроса', 'запросов'))?> на кредитование<? if (isset($creditRequestNew) && $creditRequestNew > 0) { ?>, из них <a class='text-danger font-weight-bold' href="<?=CommonUtils::makeUrl('creditRequestList', array('status' => array(CreditRequestStatus::TYPE_INCOME), 'delete' => -1))?>">ожидающих обработки: <?=$creditRequestNew?></a><? } ?>.</p>
+        
+        <? if (SecurityManager::isAllowedAction(AclAction::PUBLISH_ACTION, AclContext::CREDIT_REQUEST_ID) && $creditRequestAccepted) { ?>
+            <div class="row flex-row mb-2">
+                <div class="col-12"><h4 class="text-danger">Ожидают назначения встречи</h4></div>
+
+                <div class="table-responsive col-12">
+                    <table class="table table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="align-middle">Дата</th>
+                            <th scope="col" class="align-middle text-center">Информация о заявке</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <? 
+                        foreach($creditRequestAccepted as $item) { 
+                            $offer = $item->getCreditorOffers(array(CreditRequestCreditorOfferStatus::TYPE_ACCEPTED))[0];
+                    ?>
+                    <tr>
+                        <td class="align-middle text-nowrap">
+                            <a href="<?=CommonUtils::makeUrl('creditRequestCreditorOfferEditor', array('action' => creditRequestCreditorOfferEditor::ACTION_MEETING, 'id' => $offer->getId(), 'return' => $curl))?>" title="просмот запроса"><?=ViewTextUtils::humanizeDate($item->getCreatedTime())?></a>
+                        </td>
+                        <td class="align-middle">
+                            <a href="<?=CommonUtils::makeUrl('creditRequestCreditorOfferEditor', array('action' => creditRequestCreditorOfferEditor::ACTION_MEETING, 'id' => $offer->getId(), 'return' => $curl))?>" title="просмот запроса"><?=htmlspecialchars($item->getType()->getShortName())?> / <?=htmlspecialchars($item->getCategory()->getName())?> / <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></a>
+                        </td>
+                    </tr>
+                    <? 
+                        } 
+                    ?>
+                    </tbody>
+                    </table>
+                </div>
+            </div>
+        <? } ?>
+        
+        <hr class="my-5" />
     <? } ?>    
     
     <? if (SecurityManager::isAllowedAction(AclAction::VIEW_ACTION, AclContext::INVESTOR_OFFER_ID)) { ?>
         <h3>Предложения инвестирования</h3>
         <p><a href="<?=CommonUtils::makeUrl('investorOfferList')?>">предложения инвестирования</a></p>
         <p>Всего на сайте <?=$investorOfferNum?> <?=RussianTextUtils::selectCaseForNumber($investorOfferNum, array('предложение', 'предложения', 'предложений'))?> инвестирования<? if (isset($investorOfferModerate) && $investorOfferModerate > 0) { ?>, из них <a class='text-danger font-weight-bold' href="<?=CommonUtils::makeUrl('investorOfferList', array('active' => -1))?>">ожидающих проверки: <?=$investorOfferModerate?></a><? } ?>.</p>
+        
+        <hr class="my-5" />
     <? } ?>
     
     <? if (SecurityManager::isAllowedAction(AclAction::VIEW_ACTION, AclContext::CREDITOR_ID)) { ?>
         <h3>Компании кредиторов</h3>
         <p><a href="<?=CommonUtils::makeUrl('creditorList')?>">компании кредиторов</a></p>
         <p>Всего на сайте <?=$creditorNum?> <?=RussianTextUtils::selectCaseForNumber($creditorNum, array('кредитная организация', 'кредитные организации', 'кредитных организаций'))?><? if (isset($creditorModerate) && $creditorModerate > 0) { ?>, из них <a class='text-danger font-weight-bold' href="<?=CommonUtils::makeUrl('creditorList', array('active' => -1))?>">ожидающих проверки: <?=$creditorModerate?></a><? } ?>.</p>
+        
+        <hr class="my-5" />
     <? } ?>
     
     <? if (SecurityManager::isAllowedAction(AclAction::VIEW_ACTION, AclContext::CATEGORY_ID)) { ?>
