--- a/src/user/templates/creditRequestEditorConfirm.tpl.html
+++ b/src/user/templates/creditRequestEditorConfirm.tpl.html
@@ -132,7 +132,7 @@
             </div>
         </div>
     
-        <div class="images-cont sortable d-flex mt-5 mb-4" id="related-images" style='flex-wrap: wrap;'>
+        <div class="images-cont sortable d-flex mt-5 mb-4 justify-content-between" id="related-images" style='flex-wrap: wrap;'>
             <? 
                 foreach($imagesList as $image) { 
             ?>
