--- a/src/user/templates/creditRequestEditorDelete.tpl.html
+++ b/src/user/templates/creditRequestEditorDelete.tpl.html
@@ -56,7 +56,7 @@
         
         <div class="form-group row">
             <div class="col-12 offset-sm-2 col-sm-10 d-flex justify-content-between">
-                <button type="submit" name="ok" class="btn btn-lg btn-success mr-2 mb-2">удалить</button>
+                <button type="submit" name="ok" class="btn btn-lg btn-danger mr-2 mb-2">удалить</button>
                 <button type="submit" name="cancel" class="btn btn-link mb-2">отменить</button>
             </div>
         </div>
